# server/public/swagger.json
@@ -214,6 +214,145 @@
 				"type": "object",
 				"additionalProperties": true
 			},
+			"Decimal": {
+				"type": "string"
+			},
+			"DefaultSelection_Prisma._36_ProductPayload_": {
+				"properties": {
+					"stock": {
+						"type": "number",
+						"format": "double"
+					},
+					"price": {
+						"$ref": "#/components/schemas/Decimal"
+					},
+					"description": {
+						"type": "string"
+					},
+					"createdAt": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"id": {
+						"type": "number",
+						"format": "double"
+					},
+					"name": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"stock",
+					"price",
+					"description",
+					"createdAt",
+					"id",
+					"name"
+				],
+				"type": "object"
+			},
+			"Product": {
+				"$ref": "#/components/schemas/DefaultSelection_Prisma._36_ProductPayload_",
+				"description": "Model Product"
+			},
+			"IProduct": {
+				"$ref": "#/components/schemas/Product"
+			},
+			"IFunctionResponse_IProduct_": {
+				"properties": {
+					"status": {
+						"type": "number",
+						"format": "double"
+					},
+					"message": {
+						"type": "string"
+					},
+					"error": {
+						"type": "string"
+					},
+					"data": {
+						"$ref": "#/components/schemas/IProduct"
+					},
+					"token": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"status",
+					"message"
+				],
+				"type": "object",
+				"additionalProperties": true
+			},
+			"Pick_IProduct.Exclude_keyofIProduct.createdAt-or-id__": {
+				"properties": {
+					"name": {
+						"type": "string"
+					},
+					"description": {
+						"type": "string"
+					},
+					"price": {
+						"$ref": "#/components/schemas/Decimal"
+					},
+					"stock": {
+						"type": "number",
+						"format": "double"
+					}
+				},
+				"required": [
+					"name",
+					"description",
+					"price",
+					"stock"
+				],
+				"type": "object",
+				"description": "From T, pick a set of properties whose keys are in the union K"
+			},
+			"Omit_IProduct.createdAt-or-id_": {
+				"$ref": "#/components/schemas/Pick_IProduct.Exclude_keyofIProduct.createdAt-or-id__",
+				"description": "Construct a type with the properties of T except for those in type K."
+			},
+			"ICreateProduct": {
+				"allOf": [
+					{
+						"$ref": "#/components/schemas/Omit_IProduct.createdAt-or-id_"
+					},
+					{
+						"properties": {
+							"categoryIds": {
+								"items": {
+									"type": "number",
+									"format": "double"
+								},
+								"type": "array"
+							},
+							"images": {
+								"items": {
+									"type": "string"
+								},
+								"type": "array"
+							},
+							"price": {
+								"anyOf": [
+									{
+										"type": "number",
+										"format": "double"
+									},
+									{
+										"type": "string"
+									}
+								]
+							}
+						},
+						"required": [
+							"images",
+							"price"
+						],
+						"type": "object"
+					}
+				]
+			},
 			"Pick_Category.Exclude_keyofCategory.id__": {
 				"properties": {
 					"name": {
@@ -363,7 +502,7 @@
 				},
 				"description": "Retrieves a list of all users.",
 				"tags": [
-					"UsersController"
+					"Users"
 				],
 				"security": [],
 				"parameters": []
@@ -386,7 +525,7 @@
 				},
 				"description": "Retrieves a user by email.",
 				"tags": [
-					"UsersController"
+					"Users"
 				],
 				"security": [],
 				"parameters": [
@@ -420,7 +559,7 @@
 				},
 				"description": "Deletes a user by ID.",
 				"tags": [
-					"UsersController"
+					"Users"
 				],
 				"security": [],
 				"parameters": [
@@ -455,7 +594,7 @@
 				},
 				"description": "Registers a new Admin.",
 				"tags": [
-					"UsersController"
+					"Users"
 				],
 				"security": [],
 				"parameters": [],
@@ -467,6 +606,41 @@
 							"schema": {
 								"$ref": "#/components/schemas/IRegister",
 								"description": "- User data."
+							}
+						}
+					}
+				}
+			}
+		},
+		"/api/product": {
+			"post": {
+				"operationId": "CreateProduct",
+				"responses": {
+					"200": {
+						"description": "- The created Category",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/IFunctionResponse_IProduct_"
+								}
+							}
+						}
+					}
+				},
+				"description": "Create a New Product.",
+				"tags": [
+					"Products"
+				],
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"description": "- Product Data.",
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/ICreateProduct",
+								"description": "- Product Data."
 							}
 						}
 					}
@@ -580,7 +754,7 @@
 				},
 				"description": "Registers a new user.",
 				"tags": [
-					"AuthController"
+					"Auth"
 				],
 				"security": [],
 				"parameters": [],
@@ -615,7 +789,7 @@
 				},
 				"description": "Logs in a user.",
 				"tags": [
-					"AuthController"
+					"Auth"
 				],
 				"security": [],
 				"parameters": [],
