# server/src/controllers/product/productsController.ts
@@ -2,7 +2,14 @@ import { Post, Route, Tags, Body, Get, Delete, Path, Request } from "tsoa";
 import { IProductController } from "../interfaces";
 import { IFunctionResponse } from "../../types/functions.types";
 import { IProduct, ICreateProduct } from "../../types/index.types";
-import { createProductORM } from "../../domain/orm/products.orm";
+import {
+  createProductORM,
+  deleteProductORM,
+  getAllProductsORM,
+  getOneProductORM,
+  updateProductORM,
+} from "../../domain/orm/products.orm";
+
 
 @Route("/api/product")
 @Tags("Products")
@@ -14,7 +21,7 @@ export class ProductController implements IProductController {
    */
   @Post()
   public async createProduct(
-    product: ICreateProduct
+    @Body() product: ICreateProduct
   ): Promise<IFunctionResponse<IProduct>> {
     const { name, description, price, images } = product;
 
@@ -43,21 +50,95 @@ export class ProductController implements IProductController {
   }
 
   public async getAllProducts(): Promise<IFunctionResponse<IProduct[] | null>> {
-      
+    try {
+      const products = await getAllProductsORM();
+      return {
+        status: 200,
+        message: products
+          ? "Productos Encontrados"
+          : "No se encontraron los productos",
+        data: products,
+      };
+    } catch (error) {
+      console.error("Error in Product Controller:", error);
+      return {
+        status: 500,
+        message: "Error pidiendo Productos",
+        error: error instanceof Error ? error.message : "Unknown error",
+      };
+    }
   }
 
-  public async getProductById(id: number): Promise<IFunctionResponse<IProduct[] | null>> {
-      
+  public async getProductById(
+    id: number
+  ): Promise<IFunctionResponse<IProduct | null>> {
+    try {
+      const product = await getOneProductORM(id);
+      return {
+        status: 200,
+        message: product ? "Producto encontrado" : "Producto no encontrado",
+        data: product,
+      };
+    } catch (error) {
+      console.error("Error in Product Controller:", error);
+      return {
+        status: 500,
+        message: "Error Pidiendo el Producto",
+        error: error instanceof Error ? error.message : "Unknown error",
+      };
+    }
   }
 
   public async deleteProductById(id: number): Promise<IFunctionResponse<null>> {
-      
+    try {
+      await deleteProductORM(id);
+      return {
+        status: 200,
+        message: "Producto Borrado Correctamente",
+      };
+    } catch (error) {
+      console.error("Error in Product Controller:", error);
+      return {
+        status: 500,
+        message: "Error Eliminando el Producto",
+        error: error instanceof Error ? error.message : "Unknown error",
+      };
+    }
   }
 
-  public async updateProduct(productId: string, product: IProduct): Promise<IFunctionResponse<ICreateProduct>> {
-      
+  public async updateProduct(
+    productId: number,
+    product: ICreateProduct
+  ): Promise<IFunctionResponse<IProduct>> {
+    if (!product) {
+      return {
+        status: 400,
+        message: "Datos inválidos",
+      };
+    }
+  
+    try {
+      const updatedProduct = await updateProductORM(productId, product);
+  
+      if (!updatedProduct) {
+        return {
+          status: 404,
+          message: "Producto no encontrado",
+        };
+      }
+  
+      return {
+        status: 200,
+        message: "Producto actualizado exitosamente",
+        data: updatedProduct,
+      };
+    } catch (error) {
+      console.error("Error in Product Controller:", error);
+      return {
+        status: 500,
+        message: "Error editando el producto",
+        error: error instanceof Error ? error.message : "Unknown error",
+      };
+    }
   }
-
-
-
 }
